--- a/src/App.css
+++ b/src/App.css
@@ -89,3 +89,476 @@ h6 {
 .weight-regular {
     font-weight: var(--font-bold);
 }
+
+
+/* LAYOUT */
+.main-center{
+    display: grid;
+    height: 90dvh;
+    align-items: center;
+    justify-content: center;
+}
+
+.center-layout-header{
+    display: flex;
+    background-color: var(--Cool-Grey-10);
+    padding: 1rem;
+    align-items: center;
+    gap: 1rem;
+    img{
+        height: 26px;
+        width: 26px;
+    }
+    /* p{
+        color: var(--Secondary-110, #1C2346);
+        font-family: Inter;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 110%;
+    } */
+}
+
+.ventixe-text{
+    color: var(--Secondary-110, #1C2346);
+        font-family: Inter;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 110%;
+        text-decoration: none;
+}
+
+.sign-up-container{
+    color: var(--Secondary-100, #37437D);   
+    font-family: Inter;
+    background-color: var(--Grey-20);
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    padding: 2rem;
+    border-radius: 1rem;
+
+    input{
+        border: none;
+        padding: 8px 12px;
+        border-radius: 30px;
+    }
+
+    h3{
+        margin-bottom: 1rem;
+    }
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    gap: .8rem;
+}
+
+.form-group{
+    display: flex;
+    flex-direction: column;
+    gap: .3rem;
+}
+
+.signup-btn{
+    border: none;
+    background-color: var(--Secondary-100);
+    color: white;
+    font-family: Inter, sans-serif;
+    border-radius: 16px;
+    padding: 12px;
+    margin-top: 1rem;
+    cursor: pointer;
+}
+
+.main-wrapper{
+
+        display: grid;
+        grid-template-areas: 
+        "header"
+        "main"
+        "footer";
+
+        grid-template-columns:1fr;
+        grid-template-rows: auto 1fr auto;
+
+        padding: 1rem;
+        gap: 1rem;
+        height: 100dvh;
+    }
+
+    .navbar{
+        grid-area: header;
+        
+        background-color: var(--Cool-Grey-10);
+        border-radius: 1rem;
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem;
+    }
+
+    .logo{
+        width: 100%;
+        display: flex;
+        gap: .5rem;
+        align-items: center;
+        padding-left: .7rem;
+
+    }
+   
+
+    .navbar-a{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        justify-content: center;
+        text-decoration: none;
+        
+    }
+
+    .navbar-btn{
+        border: none;
+        background-color: transparent;
+        overflow: hidden;
+        padding: 1rem;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    .navbar-icon{
+        width: 18px;
+        height: 18px;
+    }
+
+
+
+    .header{
+        grid-area: header;
+
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        align-self: stretch;
+        background-color: var(--Cool-Grey-10);
+        border-radius: 1rem;
+        padding: 12px 16px;
+        width: 100%;
+
+    }
+
+    .header-navbar{
+        grid-area: header;
+        
+        background-color: var(--Cool-Grey-10);
+        border-radius: 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem;
+        width: 100%;
+    }
+
+    .mobile-header-display{
+        display: flex;
+        width: 100%;
+    }
+
+    .tablet-header{
+        display: none;
+    }
+    .header img{
+        width: 24px;
+        height: 24px;
+    }
+
+    .header button{
+        border: none;
+        background-color: transparent;
+    }
+
+
+    
+    .main{
+        grid-area: main;
+
+        background-color: var(--Grey-20);
+        border-radius: 1rem;
+    }
+
+    .ticket-style{
+        padding: 1rem;
+        align-self: stretch;
+        color: var(--Grey-Grey-90, #434345);
+        font-family: Inter;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 130%;
+    }
+
+    .event-details{
+        display: flex;
+        flex-direction: column;
+        padding: 1rem;
+        gap: 1rem;
+        height: 100%;
+    }
+
+    .category{
+    display: inline-block;
+    padding: 6px;
+    background-color: white;
+    border-radius: 1rem;
+    margin: 1rem;
+    color: var(--Secondary-100, #37437D);
+    font-weight: 500;
+    font-size: 11px;
+    }
+
+    .eventinfo-group{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .event-price{
+    display: flex;
+    justify-content: flex-end;
+    color: var(--Primary-100, #F26CF9);
+    font-weight: 600;
+    }
+
+    .event-date{
+    color: var(--Grey-Grey-70, #777779);
+    align-self: stretch;
+    }
+
+    .buy-btn{
+        display: inline-block;
+        width: fit-content;
+        padding: 8px 12px;
+        margin-top: 4rem;
+        border-radius: 30px;
+        background: var(--Grey-Grey-10, #FFF);
+        cursor: pointer;
+        text-decoration: none;
+        color: var(--Cool-Grey-100);
+        margin-top: 2rem;
+        
+        a:visited{
+            color: inherit;
+        }
+    }
+
+    .background-img{
+    background-color: #E0E0E1;
+    aspect-ratio: 4/2;
+    border-radius: 1rem;
+    align-self: stretch;
+    
+    
+    }
+
+    .footer{
+        grid-area: footer;
+
+        background-color: var(--Grey-20);
+        border-radius: 1rem;
+        padding: 1rem;
+        text-align: center;
+    }
+
+    .display-none{
+        display: none;
+    }
+
+@media (min-width: 768px){
+
+    .main-wrapper{
+
+        display: grid;
+        grid-template-areas: 
+        "navbar header"
+        "navbar main"
+        "navbar footer";
+
+        grid-template-columns: 90px 1fr;
+        grid-template-rows: auto 1fr auto;
+        padding: 1rem;
+        gap: 1rem;
+        height: 100vh;
+    }
+
+    .navbar{
+        display: grid;
+        grid-area: navbar;
+
+        align-items: start;
+        background-color: var(--Cool-Grey-10);
+        border-radius: 1rem;
+    }
+
+    .navbar-flex{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 2rem;
+    }
+
+    .navbar-btn{
+        border: none;
+        background-color: transparent;
+    }
+
+    #icon-names{
+        display: none;   
+    }
+
+    .mobile-header-display{
+        display: none;
+    }
+
+    .tablet-header{
+        display: flex;
+    }
+
+    .header{
+        grid-area: header;
+
+        background-color: var(--Grey-20);
+        border-radius: 1rem;
+    }
+
+    .text-decoration{
+        text-decoration: none;
+    }
+
+    #header-signout-btn{
+        display: flex;
+        align-items: center;
+        gap: .3rem;
+        background-color: var(--Cool-Grey-10) ;
+        padding: 4px 10px;
+        border-radius: 1rem;
+        
+
+        img{
+            height: 18px;
+            aspect-ratio: 1/1;
+        }
+
+    }
+
+    .header-logo{
+        display: none;
+    }
+
+    .route{
+        color: var(--Grey-Grey-70, #777779);
+        font-family: Inter;
+        font-size: 11px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 124%;
+    }
+    .route-highlight{
+        color: var(--Primary-100, #F26CF9);
+        font-family: Inter;
+        font-size: 11px;
+        font-style: normal;
+        font-weight: 400;
+    }
+
+    .main{
+        grid-area: main;
+        background-color: var(--Grey-20);
+        border-radius: 1rem;
+    }
+
+    .footer{
+        grid-area: footer;
+
+        background-color: var(--Grey-20);
+        border-radius: 1rem;
+    }
+
+    .event-grid{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-row: auto;
+    }
+
+    .searchbar-grid{
+        grid-column: 1 / 3;
+        grid-row: 1/2;
+    }
+
+    .pagination{
+        grid-column: -1/-3;
+    }
+
+}
+
+@media (min-width: 1280px){
+
+    .main-wrapper{
+
+        display: grid;
+        grid-template-areas: 
+        "navbar header"
+        "navbar main"
+        "navbar footer";
+
+        grid-template-columns: 250px 1fr;
+        grid-template-rows: auto 1fr auto;
+
+        padding: 1rem;
+        gap: 1rem;
+        height: 100dvh;
+    }
+
+    .navbar{
+        grid-area: navbar;
+
+        background-color: var(--Cool-Grey-10);
+        border-radius: 1rem;
+    }
+
+    #icon-names{
+        display: flex; 
+    }
+
+    .logo-name{
+        font-weight: var(--font-medium);
+        color: var(--Secondary-110, #1C2346);
+        
+    }
+
+    .header{
+        grid-area: header;
+
+        background-color: var(--Grey-20);
+        border-radius: 1rem;
+    }
+
+    .main{
+        grid-area: main;
+
+        background-color: var(--Grey-20);
+        border-radius: 1rem;
+    }
+
+    .footer{
+        grid-area: footer;
+
+        background-color: var(--Grey-20);
+        border-radius: 1rem;
+    }
+}
