--- a/src/App.css
+++ b/src/App.css
@@ -129,6 +129,10 @@ h6 {
         text-decoration: none;
 }
 
+.disp-flex{
+    display: flex;
+}
+
 .sign-up-container{
     color: var(--Secondary-100, #37437D);   
     font-family: Inter;
@@ -152,6 +156,40 @@ h6 {
         margin-bottom: 1rem;
     }
 }
+
+.signin-clue{
+    background-color: rgb(178, 255, 178);
+    width: 200px;
+    font-size: .8rem;
+    padding: 4px 10px;
+    border-radius: 1rem;
+
+}
+
+.spinner{
+  width: 40px;
+  height: 40px;
+  border: 4px solid lightgray;
+  border-top: 4px solid #333;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+.spinner {
+  width: 40px;
+  height: 40px;
+  border: 4px solid lightgray;
+  border-top: 4px solid #333;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to { transform: rotate(360deg); }
+}
+
+
+
 
 .form{
     display: flex;
@@ -179,6 +217,7 @@ h6 {
 .main-wrapper{
 
         display: grid;
+        margin: auto;
         grid-template-areas: 
         "header"
         "main"
@@ -190,6 +229,7 @@ h6 {
         padding: 1rem;
         gap: 1rem;
         height: 100dvh;
+        max-width: 1440px;
     }
 
     .navbar{
