--- a/src/assets/Css/Searchbar.css
+++ b/src/assets/Css/Searchbar.css
@@ -8,6 +8,10 @@
     align-items: center;
 }
 
+.searchbar:focus-within{
+    border: 2px solid var(--cool-grey-10);
+    box-shadow: 0 0 5px #007bff50;
+}
 .search-btn{
     border: none;
     background-color: transparent;
@@ -15,6 +19,11 @@
 
 .search-input{
     border: none;
+    width: 95%;
+}
+
+.search-input:focus {
+    outline: none;
 }
 
 .search-btn-icon{
